# ai-ppi-detector

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
app/: api.py  file_processing.py  main.py  models.py  services.py
